<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        />
    <EditText

        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="FName"
        android:paddingLeft="10dp"/>

    <EditText

        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/sname"
        android:paddingLeft="10dp"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/age"
        android:paddingLeft="10dp"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/numph"
        android:paddingLeft="10dp"
        android:phoneNumber="true" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password1"
        android:paddingLeft="10dp"
        android:password="true" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/checkpassword"
        android:paddingLeft="10dp"
        />
    <Button
        android:id="@+id/button_Register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#04ea00"
        android:text="Register"
        android:onClick="button_Register"
        />


</LinearLayout>